--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.21",
     "framer-motion": "^12.5.0",
+    "gsap": "^3.12.7",
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
